--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - My first website</title>
+  <title>My first website - CV</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Sans&family=Merriweather+Sans&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Sans&family=Merriweather+Sans&family=Reem+Kufi&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <div id="header">
   <img src="https://raw.githubusercontent.com/green-fox-academy/myfirstapp-syllabus/master/assets/first-website-header.png"/>
   <div class="himynameisanakinskywalker">  
@@ -20,6 +19,7 @@
 <main>
   <div id="texto1">
     <p><strong>Analytical, goal oriented leader</strong> with proven track record in management and enforcement Space Fleet Operations or Frontend Development. Wide range of hands-on experience, including:</p>
+    <br>
     <ul>
       <li>Large scale construction projects oversight</li>
       <li>Advanced forms of mind control</li>
@@ -28,76 +28,68 @@
     </ul>
   </div>
   <blockquote>
-    <ul class="container01"> 
+    <ul id="container01" class="container">
+      
       <h2 class="Together">Together we can rule the galaxy</h2>
-      <li class="item" id="quote2"></li>
-      <li class="item" id="Dot"></li>
+      <li class="item" id="quote"></li> 
     </ul>
   </blockquote>
-  <h3 class="Notable">NOTABLE ACHIEVEMENTS</h3>
-  <h4 class="Notable">Designed, built and piloted a custom pod racer. 32 BBY Boonta Eve Classic Race Champion.</h4>
+  <h3 class="NotableTitle">NOTABLE ACHIEVEMENTS</h3>
+  <h4 class="Notable">Designed, built and piloted a custom pod racer. 32 BBY Boonta Eve Classic Race Champion.</h3>
   <p class="texto2">In my spare time at Wald’s Parts junk shop I designed and built a Class III open cockpit Podracer capable of 588 mph top speed. Went on to win the Boonta Eve Classic race in 32 BBY - first ever win by a human. Generated documented company revenue of over 59 wupiupi during the course of my enslavement.</p>
   <h3 class="Notable">Oversight of DS1 and DS2 Orbital Battle Stations construction projects</h3>
-  <p class="texto2">During my tenure as a Supreme Imperial Fleet Commander I was in charge of large capital construction projects for the Deep Space Fleet. Performed acceptance testing of the DS1 SuperLaser in 0 BBY by annihilating Alderaan - a terrestrial class planet in the Core Worlds region. Successfully tripled the deep space fire power of the imperial fleet in accordance with the Tarkin Doctrine before losing both projects to run-away photon torpedoes.</p>
+  <p class="texto3">During my tenure as a Supreme Imperial Fleet Commander I was in charge of large capital construction projects for the Deep Space Fleet. Performed acceptance testing of the DS1 SuperLaser in 0 BBY by annihilating Alderaan - a terrestrial class planet in the Core Worlds region. Successfully tripled the deep space fire power of the imperial fleet in accordance with the Tarkin Doctrine before losing both projects to run-away photon torpedoes.</p>
   <blockquote>
-    <ul class="container02">
-      <h2 class="Together02">I find your lack of faith<br>disturbing.</h2>
-      <li class="item" id="quote2"></li>
-      <li class="item" id="Dot"></li>
+    <ul id="container02" class="container">
+      <h2 class="Together Together02">I find your lack of faith<br>disturbing.</h2>
+      <li class="item2" id="quote"></li>
     </ul>
   </blockquote>
-  <h3 class="Notable">EXPERIENCE</h3>
-  <h4 class="Notable1">Sith Empire Headquarters, Dromund Kaas</h4>
+  <h3 class="NotableTitle">EXPERIENCE</h3>
+  <h4 class="NotableTitle1">Sith Empire Headquarters, Dromund Kaas</h4>
   <h6 class="Notable1">Supreme Commander of Imperial Forces, Emperor's Enforcer</h6>
   <ul class="texto2">
-    <li>As the right-hand man to Emperor Sidious, hunted down jedi survivors and enforced the will of the empire;</li>
+    <li>As the right-hand man to Emperor Sidious, hunted down jedi survivors and enforced the will of the<br>empire;</li>
     <li>Oversaw construction of the first generation Death Star;</li>
     <li>First ever Imperial Supreme Commander;</li>
   </ul>
-  <h4 class="Notable1">Wally’s Parts / Toyarian Watto junk shop, Mos Espa, Tatooine</h4>
+  <h4 class="NotableTitle1">Wally’s Parts / Toyarian Watto junk shop, Mos Espa, Tatooine</h4>
   <h6 class="Notable1">Enslaved Volunteer</h6>
   <ul class="texto2">
-    <li>General help and front-desk retail operations at the junk shop, second hand droid parts, mechanical / droid repair services;</li>
+    <li>General help and front-desk retail operations at the junk shop, second hand droid parts, mechanical /<br>droid repair services;</li>
     <li>Designed and piloted custom-built Podracer, ran track-side operations for the podracing team;</li>
   </ul>
   <blockquote>
-    <ul class="container02">
-      <h2 class="Together02">When I left you, I was but the learner; now I am the master.</h2>
-      <li class="item" id="quote2"></li>
-      <li class="item" id="Dot"></li>
+    <ul id="container03" class="container">
+      <h2 class="Together Together02">When I left you, I was but the<br>learner; now I am the master.</h2>
+      <li class="item2" id="quote"></li>
     </ul>
   </blockquote>
-  <h3 class="Notable">FORMAL TRAINING</h3>
-  <h4 class="Notable1">Green Fox Academy, Budapest</h4>
+  <h3 class="NotableTitle">FORMAL TRAINING</h3>
+  <h4 class="NotableTitle1">Green Fox Academy, Budapest</h4>
   <h6 class="Notable1">Full stack developer</h6>
   <ul class="texto2">
     <li>Padawan to Knight Tojas.</li>
     <li>Learned programming with a specialisation in JavaScript and Front-end technologies</li>
   </ul>
-  <h4 class="Notable1">Sith Empire, Coruscant</h4>
+  <h4 class="NotableTitle1">Sith Empire, Coruscant</h4>
   <h6 class="Notable1">Master of the Dark Side of the Force</h6>
   <ul class="texto2">
     <li>Apprentice to Sith Lord Darth Sidious;</li>
   </ul>
-  <h4 class="Notable1">Jedi Order Academy, Coruscant</h4>
+  <h4 class="NotableTitle1">Jedi Order Academy, Coruscant</h4>
   <h6 class="Notable1">Master of Jedi Force</h6>
   <ul class="texto2">
-    <li>Padawan to Knight Obi Wan Kenobi. Bodyguard to Senator Padme Amidala during the Clone Wars of 22 BBY;</li>
+    <li>Padawan to Knight Obi Wan Kenobi. Bodyguard to Senator Padme Amidala during the Clone Wars of<br>22 BBY;</li>
     <li>Graduated with donors;</li>
   </ul>
-  <hr class="Line" width=100% Size=4>
-  <h3 class="Notable">PERSONAL INTERESTS</h3>
+  <hr class="Line" width=100% Size=5>
+  <h3 class="NotableTitle3">PERSONAL INTERESTS</h3>
   <ul class="texto2">
     <li>Midi-Chlorian research as a hobby;</li>
     <li>Recreational mind-control techniques;</li>
     <li>Amateur and local club podracing.</li>
   </ul>
 </main>
-<aside>
-</aside>
-<footer>
-</footer>
-<!-- partial -->
-  
 </body>
 </html>
